--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,6 +29,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: Kee7702/KHSAssets
+          token: ${{ secrets.TOKEN }}
       - name: Setup Pages
         uses: actions/configure-pages@v2
       - name: Build with Jekyll
