--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,6 +25,9 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - name: Add mask
+        run: |
+          echo "::add-mask::*" 
       - name: Checkout
         uses: actions/checkout@v3
         with:
