--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,7 @@ jobs:
     steps:
       - name: Add mask
         run: |
-          echo "::add-mask::${{ secrets.MASK }}" 
+          echo off
       - name: Checkout
         uses: actions/checkout@v3
         with:
