--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,6 +33,7 @@ jobs:
         with:
           repository: Kee7702/KHSAssets
           token: ${{ secrets.TOKEN }}
+          path: ./${{ secrets.WEBPAGE_ID }}/${{ github.build_revision }}
       - name: Setup Pages
         uses: actions/configure-pages@v2
       - name: Build with Jekyll
