--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,6 +48,9 @@ jobs:
           destination: ./_site
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
+      - uses: geekyeggo/delete-artifact@v2
+        with:
+          name: github-pages
 
   # Deployment job
   deploy:
