--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -56,9 +56,6 @@ jobs:
         uses: actions/upload-pages-artifact@v1
       - name: Delete Artifact
         uses: geekyeggo/delete-artifact@v2
-        if: failure()
-        with:
-          name: github-pages
 
   # Deployment job
   deploy:
@@ -71,6 +68,14 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v1
+
+
+  # Artifact clean-up job
+  clean:
+    if: always()
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
       - name: Delete Artifact
         uses: geekyeggo/delete-artifact@v2
         if: always()
