--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -10,7 +10,7 @@ on:
   workflow_dispatch:
   
   repository_dispatch:
-    types: [pfs]
+    types: [Dispatched from PrivateFileShare]
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
   contents: read
