--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -38,6 +38,13 @@ jobs:
           path: ./${{ secrets.TSS_ID }}
       - name: Move BilligerHost Contents
         run: mv -f ${{ secrets.TSS_ID }}/billigerhost billigerhost
+      - name: Download TSSLS
+        uses: robinraju/release-downloader@v1.7
+        with:
+          repository: "Kee7702/ToolboxStaffShare"
+          token: ${{ secrets.TOKEN }}
+          tag: "largestorage"
+          out-file-path: ./${{ secrets.TSS_ID }}
       - name: Download 00010101 resolve 
         uses: robinraju/release-downloader@v1.7
         with:
