--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -20,18 +20,18 @@ concurrency:
 
 jobs:
   build:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       - name: Checkout AltFileShare
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           repository: Kee7702/AltFileShare
           token: ${{ secrets.TOKEN }}
           path: ./${{ secrets.AFS_ID }}
       - name: Checkout ToolboxStaffShare
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           repository: Kee7702/ToolboxStaffShare
           token: ${{ secrets.TOKEN }}
@@ -39,14 +39,14 @@ jobs:
       - name: Move BilligerHost Contents
         run: mv -f ${{ secrets.TSS_ID }}/billigerhost billigerhost
       - name: Download TSS LargeStorage
-        uses: robinraju/release-downloader@v1.7
+        uses: robinraju/release-downloader@v1.11
         with:
           repository: "Kee7702/ToolboxStaffShare"
           token: ${{ secrets.TOKEN }}
           tag: "largestorage"
           out-file-path: ./${{ secrets.TSS_ID }}
       - name: Download 00010101 resolve 
-        uses: robinraju/release-downloader@v1.7
+        uses: robinraju/release-downloader@v1.11
         with:
           repository: "Kee7702/ToolboxStaffShare"
           token: ${{ secrets.TOKEN }}
@@ -54,7 +54,7 @@ jobs:
           fileName: ${{ secrets.TBSTAFF_00010101 }}.md
           out-file-path: ./resolve
       - name: Download 00010102 resolve 
-        uses: robinraju/release-downloader@v1.7
+        uses: robinraju/release-downloader@v1.11
         with:
           repository: "Kee7702/ToolboxStaffShare"
           token: ${{ secrets.TOKEN }}
@@ -62,7 +62,7 @@ jobs:
           fileName: ${{ secrets.TBSTAFF_00010102 }}.md
           out-file-path: ./resolve
       - name: Download 00010201 resolve 
-        uses: robinraju/release-downloader@v1.7
+        uses: robinraju/release-downloader@v1.11
         with:
           repository: "Kee7702/ToolboxStaffShare"
           token: ${{ secrets.TOKEN }}
@@ -70,7 +70,7 @@ jobs:
           fileName: ${{ secrets.TBSTAFF_00010201 }}.md
           out-file-path: ./resolve
       - name: Download 00020101 resolve 
-        uses: robinraju/release-downloader@v1.7
+        uses: robinraju/release-downloader@v1.11
         with:
           repository: "Kee7702/ToolboxStaffShare"
           token: ${{ secrets.TOKEN }}
@@ -78,7 +78,7 @@ jobs:
           fileName: ${{ secrets.TBSTAFF_00020101 }}.md
           out-file-path: ./resolve
       - name: Download 00030101 resolve 
-        uses: robinraju/release-downloader@v1.7
+        uses: robinraju/release-downloader@v1.11
         with:
           repository: "Kee7702/ToolboxStaffShare"
           token: ${{ secrets.TOKEN }}
@@ -86,7 +86,7 @@ jobs:
           fileName: ${{ secrets.TBSTAFF_00030101 }}.md
           out-file-path: ./resolve
       - name: Download 00040101 resolve 
-        uses: robinraju/release-downloader@v1.7
+        uses: robinraju/release-downloader@v1.11
         with:
           repository: "Kee7702/ToolboxStaffShare"
           token: ${{ secrets.TOKEN }}
@@ -94,7 +94,7 @@ jobs:
           fileName: ${{ secrets.TBSTAFF_00040101 }}.md
           out-file-path: ./resolve
       - name: Download 00050101 resolve 
-        uses: robinraju/release-downloader@v1.7
+        uses: robinraju/release-downloader@v1.11
         with:
           repository: "Kee7702/ToolboxStaffShare"
           token: ${{ secrets.TOKEN }}
@@ -102,7 +102,7 @@ jobs:
           fileName: ${{ secrets.TBSTAFF_00050101 }}.md
           out-file-path: ./resolve
       - name: Download 00060101 resolve 
-        uses: robinraju/release-downloader@v1.7
+        uses: robinraju/release-downloader@v1.11
         with:
           repository: "Kee7702/ToolboxStaffShare"
           token: ${{ secrets.TOKEN }}
@@ -110,7 +110,7 @@ jobs:
           fileName: ${{ secrets.TBSTAFF_00060101 }}.md
           out-file-path: ./resolve
       - name: Download 00060102 resolve 
-        uses: robinraju/release-downloader@v1.7
+        uses: robinraju/release-downloader@v1.11
         with:
           repository: "Kee7702/ToolboxStaffShare"
           token: ${{ secrets.TOKEN }}
@@ -118,7 +118,7 @@ jobs:
           fileName: ${{ secrets.TBSTAFF_00060102 }}.md
           out-file-path: ./resolve
       - name: Download 00070101 resolve 
-        uses: robinraju/release-downloader@v1.7
+        uses: robinraju/release-downloader@v1.11
         with:
           repository: "Kee7702/ToolboxStaffShare"
           token: ${{ secrets.TOKEN }}
@@ -126,7 +126,7 @@ jobs:
           fileName: ${{ secrets.TBSTAFF_00070101 }}.md
           out-file-path: ./resolve
       - name: Download 00070102 resolve 
-        uses: robinraju/release-downloader@v1.7
+        uses: robinraju/release-downloader@v1.11
         with:
           repository: "Kee7702/ToolboxStaffShare"
           token: ${{ secrets.TOKEN }}
@@ -134,7 +134,7 @@ jobs:
           fileName: ${{ secrets.TBSTAFF_00070102 }}.md
           out-file-path: ./resolve
       - name: Download 00080101 resolve 
-        uses: robinraju/release-downloader@v1.7
+        uses: robinraju/release-downloader@v1.11
         with:
           repository: "Kee7702/ToolboxStaffShare"
           token: ${{ secrets.TOKEN }}
@@ -142,9 +142,9 @@ jobs:
           fileName: ${{ secrets.TBSTAFF_00080101 }}.md
           out-file-path: ./resolve
       - name: Setup Pages
-        uses: actions/configure-pages@v2
+        uses: actions/configure-pages@v5.0.0
       - name: Build with Jekyll
-        uses: actions/jekyll-build-pages@v1
+        uses: actions/jekyll-build-pages@v1.0.13
         with:
           source: ./
           destination: ./_site
@@ -168,7 +168,7 @@ jobs:
     needs: deploy
     steps:
       - name: Delete Artifact
-        uses: geekyeggo/delete-artifact@v2
+        uses: geekyeggo/delete-artifact@v5.1.0
         if: always()
         with:
           name: github-pages
