--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -50,6 +50,10 @@ jobs:
           token: ${{ secrets.TOKEN }}
           tag: "lfs"
           out-file-path: ./${{ secrets.AFS_ID }}/lfs
+      - name: Generate Directory Listings
+        uses: jayanta525/github-pages-directory-listing@v4.0.0
+        with:
+          FOLDER: ./${{ secrets.AFS_ID }}
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Upload artifact
